--- a/100-math-description/cites.bib
+++ b/100-math-description/cites.bib
@@ -7,3 +7,15 @@
   location = {Portland, OR},
   note = {Available at: \url{https://www.fpc.org/documents/CSS/2020-CSS-Report.pdf}},
 }
+
+@article{staton-etal-2022,
+  title = {Accounting for Uncertainty When Estimating Drivers of Imperfect Detection: {{An}} Integrated Approach Illustrated with Snorkel Surveys for Riverine Fishes},
+  author = {Staton, Benjamin A. and Justice, Casey and White, Seth and Sedell, Edwin R. and Burns, Lauren A. and Kaylor, Matthew J.},
+  year = {2022},
+  month = feb,
+  journal = {Fisheries Research},
+  volume = {249},
+  pages = {106209},
+  doi = {10.1016/j.fishres.2021.106209},
+  note = {doi: \href{https://doi.org/10.1016/j.fishres.2021.106209}{10.1016/j.fishres.2021.106209}},
+}
